# Framework

DMC_CUDA/DMC_CUDA/: DMC_CUDA.vcxproj  DMC_CUDA.vcxproj.filters
DMC_CUDA/DMC_CUDA/Debug/: dmc.cu.cache
DMC_CUDA/DMC_CUDA/Debug/DMC_CUDA.tlog/: DMC_CUDA.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
DMC_CUDA/DMC_CUDA/Debug/src/: dmc.cu.deps
DMC_CUDA/DMC_CUDA/include/: cuda_includes.h  utils.hpp
MeshGeneration/: MeshGeneration.sln
MeshGeneration/DMC_CUDA/: DMC_CUDA.sln
MeshGeneration/DMC_CUDA/DMC_CUDA/: DMC_CUDA.vcxproj  DMC_CUDA.vcxproj.filters  extract_pt.py  main.cpp
MeshGeneration/DMC_CUDA/DMC_CUDA/include/: dmc.hpp  helper_math.hpp
MeshGeneration/DMC_CUDA/DMC_CUDA/src/: dmc.cu
MeshGeneration/MPU/: MPU.sln
MeshGeneration/MPU/MPU/: MPU.vcxproj  MPU.vcxproj.filters  main.cpp
MeshGeneration/MPU/MPU/include/: math_utils.hpp  mpu.hpp  quadratic_utils.hpp  quadratics.hpp
MeshGeneration/MPU/MPU/lib/: flann_cpp_s.lib
MeshGeneration/MPU/MPU/src/: math_utils.cpp  mpu.cpp  quadratic_utils.cpp  quadratics.cpp
MeshGeneration/MeshGeneration/: MeshGeneration.vcxproj  MeshGeneration.vcxproj.filters  main.cpp
MeshGeneration/MeshGeneration/include/: helper_math.hpp  meshgen.hpp  utils.hpp
MeshGeneration/MeshGeneration/src/: meshgen.cpp
SymmThinningCUDA/: README.md  SymmThinningCUDA.sln
SymmThinningCUDA/SymmThinningCUDA/: .gitignore  CMakeLists.txt  SymmThinningCUDA.vcxproj  SymmThinningCUDA.vcxproj.filters  main.cu
SymmThinningCUDA/SymmThinningCUDA/include/: attachment.cuh  clique.cuh  cuda_includes.h  neighbor.cuh  thinning.h  thinning_base.cuh  thinning_details.cuh
SymmThinningCUDA/SymmThinningCUDA/libs/: CMakeLists.txt  binvox.cpp  binvox.h  h5_io.cpp  h5_io.h  io_shared.cpp  io_shared.h  lodepng.cpp  lodepng.h  param_parser.h  png_io.cpp  png_io.h  png_loader.cpp  png_loader.h
SymmThinningCUDA/SymmThinningCUDA/oldH5/: 0.h5  1.h5  2.h5  chunkMap.txt
SymmThinningCUDA/SymmThinningCUDA/src/: CMakeLists.txt  attachment.cu  clique.cu  neighbor.cu  thinning.cu  thinning_details.cu
SymmThinningCUDA/SymmThinningCUDA/test/: for_test.h  test_attach.cuh  test_clique.cuh
